fix spacing

--- a/app/javascript/src/application.css
+++ b/app/javascript/src/application.css
@@ -1,12 +1,16 @@
 @import "bootstrap";
 
 body {
-  display: flex;
-  height: 100vh;
-  flex-direction: column;
-  justify-content: space-between;
+  /* display: flex; */
+  /* height: 100vh; */
+  /* flex-direction: column;
+  justify-content: space-between; */
 }
 
 a {
   text-decoration: none;
 }
+
+/* .main {
+  height: 100vh;
+} */
